# readervzrd

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-please.yml  rust.yml
src/: lib.rs
tests/: inner_array_test.json  mixed_key_order_test.json  nested_test.json  test.csv  test.json  test.parquet  test.tsv
