[package]
name = "readervzrd"
description = "A generic reader for csv and json data"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Felix Wiegand <felix.wiegand@tu-dortmund.de>"]
repository = "https://github.com/datavzrd/readervzrd/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parquet = "55.1"
